# semantic-anchoring-memory

./: .dockerignore  .gitignore  Dockerfile  README.md  TBox.py  character.py  chat.py  cli.py  config.py  forget.py  generate_tbox_databases.py  ingest.py  landwehr.py  learn.py  main.py  memory.py  prompts.py  pyproject.toml  requirements.txt  store_predicates.py  summarize.py  tbox.py  tests.py  validate.py
database/vector_db/: README.md
memory/: prompts.py
memory/landwehr/: landwehr.py  prompts.py
memory/semantic/: abox.py  learn.py  memory.py  prompts.py  semantic_memory.py  store.py  tbox.py
notebooks/: memory_retention_viz.ipynb
ontologies/: base_knowledge.owl  base_knowledge.ttl  classes.owl  classes_dbpedia.owl  predicates.owl  predicates_dbpedia.owl
predicates_db/0df433b7-3837-42f7-b377-1a606a3acee3/: index_metadata.pickle
server/: callback.py  chat.py  landwehr.py  learn.py  prompts.py  semantic_memory.py  tbox.py
server/memory/: landwehr.py  learn.py  prompts.py  semantic_memory.py
server/memory/landwehr/: landwehr.py
server/memory/semantic/: abox.py  learn.py  semantic_memory.py  store.py  tbox.py
server/static/css/: styles.css
server/static/js/: main.js  textarea.js
server/templates/: index.html
static/css/: styles.css
static/js/: main.js
templates/: index.html
validation/subjects/farmers_protest_france_2024/: 2024_french_farmers_protest_wikipedia.txt
validation/subjects/michael_biopic/: michael.txt
validation/topics/climate_change/: climate_change.txt  dbpedia.ttl  meta.json  (+6 more)
vector_db/hf_classes_db/: chroma.sqlite3
(+181 files in other folders)
