[tool.poetry]
name = "semantic-anchoring-memory"
version = "0.1.0"
description = "Semantic Anchoring for Long-Term Conversational Memory"
authors = ["Florian Rieder <florian.rieder@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.350"
openai = "^1.4.0"
chromadb = "^0.4.20"
fastapi = "^0.108.0"
rdflib = "^7.0.0"
langchain-community = "^0.0.13"
langchain-openai = "^0.0.3"
jinja2 = "^3.1.3"
uvicorn = "^0.27.0.post1"
owlrl = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
